<resources>
    <string name="translator_api_token" translatable="false">trnsl.1.1.20200402T080645Z.0732f19c5259f95d.1616a682c114ecb657c4662f9f045fcd65b86ae4</string>

    <string name="app_name">English Tenses</string>

    <string name="present_simple" translatable="false">Present Simple</string>
    <string name="present_continuous" translatable="false">Present Continuous</string>
    <string name="present_perfect" translatable="false">Present Perfect</string>
    <string name="present_perfect_continuous" translatable="false">Present Perfect Continuous</string>

    <string name="past_simple" translatable="false">Past Simple</string>
    <string name="past_continuous" translatable="false">Past Continuous</string>
    <string name="past_perfect" translatable="false">Past Perfect</string>
    <string name="past_perfect_continuous" translatable="false">Past Perfect Continuous</string>

    <string name="future_simple" translatable="false">Future Simple</string>
    <string name="future_continuous" translatable="false">Future Continuous</string>
    <string name="future_perfect" translatable="false">Future Perfect</string>
    <string name="future_perfect_continuous" translatable="false">Future Perfect Continuous</string>


    <string name="single_tip">Here you need to use %s</string>
    <string name="many_tip">In %s case you need to use %s</string>
    <string name="secs">%d sec.</string>

    <string-array name="ordinal_numbers">
        <item>first</item>
        <item>second</item>
        <item>third</item>
        <item>fourth</item>
        <item>fifth</item>
        <item>sixth</item>
        <item>seventh</item>
    </string-array>

    <plurals name="pass_test">
        <item quantity="one">Pass %d test</item>
        <item quantity="other">Pass %d tests</item>
    </plurals>

    <string name="passed">Passed: %d</string>
    <string name="open_theory">Open theory</string>
    <string name="learn_sentences">Learn %d sentences</string>
    <string name="learned">Learned: %d</string>

    <plurals name="pass_test_without_mistakes">
        <item quantity="one">Pass %d test without mistakes</item>
        <item quantity="other">Pass %d tests without mistakes</item>
    </plurals>

    <string name="written">Passed: %d</string>
    <plurals name="combo_test">
        <item quantity="other">Pass test %d times in a row with 70%% correct answers</item>
    </plurals>

    <string name="rate_app">Rate app</string>

    <string name="training">Training</string>
    <string name="my_achievements">My achievements</string>
    <string name="new_achievement_got">Achievement get!</string>
    <string name="stars_got">Total stars collected:</string>
    <string name="test">Test</string>
    <string name="irregular_verbs">Irregular verbs</string>
    <string name="search">Search</string>
    <string name="chose_all">Choose all</string>
    <string name="correct">Correct!</string>
    <string name="do_you_want_abort_test">Do you want abort the test?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test_results">Test results</string>
    <string name="correctness">Correctness</string>
    <string name="consumed_time">Consumed time</string>
    <string name="tenses_learned">Total tenses</string>
    <string name="quit">Quit</string>
    <string name="please_rate_app">Please, rate the app to make it better</string>
    <string name="make_correct_answers">Try to give as many correct answers as you can in less time</string>
    <string name="incorrect">Oops… mistake</string>
    <string name="irregular_verbs_table">Irregular verbs table</string>
    <string name="check">Check</string>
    <string name="theory">Theory</string>
    <string name="chose">Choose</string>
    <string name="tip">Hint</string>
    <string name="next">Next</string>
    <string name="rate">Rate</string>
    <string name="hide">Hide</string>
    <string name="begin">Begin</string>
    <string name="show_correct_answers">Show answers</string>
    <string name="complaint_dialog_title">Complaint</string>
    <string name="complaint_dialog_message">Does this example contain an error? Do you want to send a complaint?</string>
    <string name="complaint_thanks">Thank you!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="cant_start_exercise">Choose 2 or more tenses to start exercise</string>
    <string name="skip">Skip</string>
    <string name="translation">Translation</string>
    <string name="may_not_be_100_accurate">Translation may not be 100% accurate</string>
    <string name="loading">We are setting application up for you</string>
    <string name="settings">Settings</string>
    <string name="native_language">Native language</string>
    <string name="auto_detection">Auto detection</string>
    <string name="choose_english">Choose English to turn on off translation</string>
</resources>
