<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_menu_height"
    android:background="@color/background_mistake"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/incorrect"
        android:textColor="@color/redText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <english.tenses.practice.view.views.Button3d
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:button3dStyle="red"
        app:button3dText="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <english.tenses.practice.view.views.Button3d
        android:id="@+id/showCorrectAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:button3dStyle="red"
        app:button3dText="@string/show_correct_answers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next" />

    <english.tenses.practice.view.views.Layout3d
        android:id="@+id/complaint"
        android:layout_width="54dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout3dColor="@color/colorRedButton"
        app:layout_constraintBottom_toBottomOf="@+id/next"
        app:layout_constraintEnd_toStartOf="@+id/showCorrectAnswers"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/next">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/flag" />
    </english.tenses.practice.view.views.Layout3d>
</androidx.constraintlayout.widget.ConstraintLayout>